{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Inputs",
            "id": "ebc38f3b-d3d6-4288-b394-d1a34b3cb40d",
            "actions": [
                {
                    "name": "LeftMouseButton",
                    "type": "Button",
                    "id": "0e6e2671-197f-44aa-9210-bb5df42642bb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.25)"
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "e256d5d8-7341-40f3-8643-7eefa207af4f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "Hold(duration=0.1)"
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3bafd340-e691-43d5-beb1-c2407c7d9920",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftMouseButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1a6a91d0-2bb7-49d6-b03b-fddc5c828d31",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}